--- a/SecurityApp.Infrastructure/SecurityApp.Infrastructure.csproj
+++ b/SecurityApp.Infrastructure/SecurityApp.Infrastructure.csproj
@@ -7,6 +7,7 @@
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
+    <PackageReference Include="Microsoft.Extensions.Identity.Core" Version="8.0.23" />
   </ItemGroup>
 
   <ItemGroup>
